--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item nav-link active">Statiscics</li>
+        <li class="nav-item nav-link active">Statistics</li>
         <li class="nav-item nav-link">Hourly</li>
         <li class="nav-item nav-link">About</li>
       </ul>
@@ -70,7 +70,7 @@
     </div>
   </nav>
   <div>
-    <div class="pages">
+    <div class="pages show">
       <h1>WeatherAlert</h1>
       <p>The most accurate weather page in the world! According to some sources...</p>
       <div class="w-statistics"></div>
